# MetaScript

./: .gitignore  META_SCRIPT_SPEC.txt  README.md  agent-demo.ms  agent-fallback.ms  avg.ms  hello.ms  loop.ms  pyproject.toml  story.ms
.github/workflows/: vllm-integration.yml
metascript/: __init__.py  ast.py  audit.py  cli.py  grammar.lark  macros.py  parser.py  transpiler_js.py  transpiler_py.py  unparse.py
metascript/agents/: __init__.py  backend_agent.py  discovery.py  frontend_agent.py  model_selection.py  tools.py  transformers_js_adapter.py
tests/: test_advanced_features.py  test_agents.py  test_agents_tools.py  test_autonomy_mode.py  test_autotune.py  test_cli.py  test_cli_autotune.py  test_config_cli.py  test_discovery.py  test_discovery_start_vllm.py  test_examples.py  test_frontend_http_external.py  test_integration_vllm.py  test_model_adapters.py  test_parser_ast.py  test_tools.py  test_transformersjs_selection.py  test_transpiler_js.py  test_transpiler_py.py
tools/: transformers_js_bridge.js
